# proteoxystis

./: .gitignore  README.md  maintainernotes.md  pyproject.toml
src/proteoxystis/: protex.py
tests/: test_command.py
